--- a/app/views/document.html
+++ b/app/views/document.html
@@ -19,7 +19,7 @@
 
 					<form class="shownoter">
 						<input type="submit" value="Als Helfer eintragen" ng-show="!isShownoter()" ng-click="addShownoter()" />
-						<input type="submit" value="Du bist eingetragen" ng-show="isShownoter()" ng-click="delShownoter()" />
+						<input type="submit" value="Als Helfer austragen" ng-show="isShownoter()" ng-click="delShownoter()" />
 					</form>
 
 					<form class="sighting" ng-show="false">
@@ -53,6 +53,7 @@
 	</div>
 
 	<div class="chat">
+
 		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
 		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
 		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
