--- a/app/views/livelist.html
+++ b/app/views/livelist.html
@@ -1,9 +1,7 @@
 <h2>Die kollaborative Plattform für Sendungsnotizen</h2>
 
 <div class="box-wrapper">
-	<h3>Einleitung</h3>
-	<p>Willkommen! Hier siehst du, welche Podcast-Aufzeichnungen wann beginnen.<br />
-	Um live bei den Sendungsnotizen zu helfen,
+	<p>Willkommen! Hier siehst du, welche Podcast-Aufzeichnungen wann beginnen. Um live bei den Sendungsnotizen zu helfen,
 		<span ng-hide="$root.currentUser">logge dich bitte ein und klicke dann</span>
 		<span ng-hide="!$root.currentUser">klicke</span>
 	auf <strong>Erstellen</strong> oder <strong>Mitschreiben</strong>.
