--- a/app/views/user/upgrade.html
+++ b/app/views/user/upgrade.html
@@ -6,7 +6,7 @@
 <p>Da du bereits beim alten <em>ShowPad</em> einen Account hattest, möchten wir dich bitten, dein Passwort aus Sicherheitsgründen zu ändern und unsere neuen <a href="/rules">Regeln</a> zu akzeptieren.</p>
 
 <div class="box-wrapper">
-	<h3>Profil aktualisieren</h3>
+	<h3>Daten aktualisieren</h3>
 
 	<form class="profile-edit">
 		<input type="password" value="" placeholder="Neues Passwort" ng-model="upgrade.password" />
