--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,7 +43,6 @@
 	color: #fefefe;
 	text-shadow: none;
 }
-
 // https://docs.angularjs.org/api/ng/directive/ngCloak
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
@@ -51,7 +50,6 @@
 
 /* Typeface */
 $fontDirectory: '/fonts';
-
 @font-face {
 	font-family: 'FiraSans';
 	font-style: normal;
@@ -346,7 +344,7 @@ input[type='button']:disabled:hover,
 input[type='submit']:disabled:hover,
 input[type='button']:disabled:active,
 input[type='submit']:disabled:active {
-	background-color: #eee;
+	background-color: #ccc;
 	color: #999;
 	cursor: default;
 	top: 0;
@@ -404,12 +402,27 @@ body {
 .sidebar {
 	background-color: #eee;
 	box-shadow: 0 .25em 1em rgba(0,0,0,.8);
+	position: relative;
 	min-width: 20em;
 	max-width: 20em;
 	z-index: 1337;
 }
 .sidebar > *:not(:first-child):not(:last-child) {
 	margin-bottom: 2em;
+}
+.sidebar > .toggle {
+	background-color: #40a662;
+	color: #fff;
+	position: absolute;
+	top: 0px;
+	right: -2em;
+	padding: .25em .5em;
+	border-top-right-radius: .4em;
+	border-bottom-right-radius: .4em;
+}
+.sidebar > .toggle:hover {
+	background-color: #007369;
+	cursor: pointer;
 }
 
 /* Header */
@@ -707,7 +720,8 @@ nav li > input {
 .chat {
 	width: 20%;
 	height: 100vh;
-	overflow-x: scroll;
+	overflow-y: scroll;
+	box-shadow: 0 .25em 1em rgba(0,0,0,.8);
 }
 .chat p {
 	font-size: .8em;
@@ -866,6 +880,9 @@ footer {
 footer p {
 	font-size: .8em;
 }
+footer p:not(:last-child) {
+	margin-bottom: 1em;
+}
 footer a:link,
 footer a:visited {
 	color: #666;
@@ -873,9 +890,6 @@ footer a:visited {
 }
 footer a:hover {
 	color: #111;
-}
-footer p:not(:last-child) {
-	margin-bottom: 1em;
 }
 
 /* Responsive */
@@ -885,15 +899,13 @@ footer p:not(:last-child) {
 		max-width: 6em;
 	}
 	header,
+	.sidebar > .toggle,
 	.sidebar p,
 	.sidebar .caption {
 		display: none;
 	}
 	.sidebar {
 		padding: 1em;
-	}
-	.sidebar > p {
-		display: none;
 	}
 	nav {
 		margin: 0px -1em;
@@ -922,8 +934,8 @@ footer p:not(:last-child) {
 	.content {
 		min-width: 25em;
 	}
-	.padlist tr > th:nth-child(2),
-	.padlist tr > td:nth-child(2) {
+	.padlist tr > th:nth-child(3),
+	.padlist tr > td:nth-child(3) {
 		display: none;
 	}
 	.document-header > * {
