--- a/app/views/user/regcomplete.html
+++ b/app/views/user/regcomplete.html
@@ -1,6 +1,5 @@
-<h2>Registrierung</h2>
+<h2>Registration erfolgreich</h2>
 <h3>Hinweis</h3>
-<p>
-	Dein Account wurde erstellt!<br />
-	Bitte bestätige die angegebene E-Mail-Adresse mit dem Link aus der Mail die wir dir gerade geschickt haben. Danach kannst du dich einloggen.
-</p>
+
+<p>Vielen Dank, dein Account wurde erstellt!</p>
+<p>Bitte bestätige deine E-Mail-Adresse, indem du auf den Link klickst, der dir soeben via E-Mail zugeschickt wurde.</p>
