--- a/app/views/document.html
+++ b/app/views/document.html
@@ -54,73 +54,11 @@
 
 	<div class="chat">
 
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p ng-repeat="msg in chatmessages" style="background-color: #{{msg.issuer.color}}"><time>{{msg.date | date: 'shortTime'}}</time><strong>{{msg.issuer.name}}:</strong> {{msg.message}}</p>
 
 		<form class="chat-input">
-			<input type="text" value="" placeholder="Nachricht" />
-			<input type="submit" value="Senden" />
+			<input type="text" value="" placeholder="Nachricht" ng-model="chatmsg.message" />
+			<input type="submit" value="Senden" ng-click="sendChatMsg()" />
 		</form>
 
 	</div>
