Block layout for readonly-view, fixes, favicons

--- a/app/views/document-readonly.html
+++ b/app/views/document-readonly.html
@@ -14,24 +14,25 @@
 </div>
 
 <div class="button-group">
-	<input type="button" value="Liste" disabled />
-	<input type="button" value="Block" />
-	<input type="button" value="OSF" />
-	<input type="button" value="Markdown" />
-	<input type="button" value="Reaper" />
-	<input type="button" value="Audacity" />
-	<input type="button" value="Kapitel" />
+	<button disabled >Liste</button>
+	<button>Block</button>
+	<button>OSF</button>
+	<button>Markdown</button>
+	<button>Reaper</button>
+	<button>Audacity</button>
+	<button>Kapitel</button>
+	<button title="HTML herunterladen"><span class="icon-arrow-down"></span></button>
 </div>
 
 <hr />
 
-<div class="document-text">
+<div class="document-list">
 
 	<h2>00:00:00 <a href="https://www.youtube.com/watch?v=XQKGWw-ZTaw">Intro: Kraftwerk - Number</a></h2>
 
 	<ul>
 		<li>
-			Heute mit
+			<span title="00:13:37.000: Heute mit">Heute mit</span>
 			<ul>
 				<li><a href="#" title="00:13:37.000: Andreas Steinhauser (Steini)">Andreas Steinhauser (Steini)</a></li>
 				<li><a href="#" title="00:13:37.000: Tim Pritlove">Tim Pritlove</a></li>
@@ -51,6 +52,19 @@
 			</ul>
 		</li>
 	</ul>
+
+</div>
+
+<div class="document-block">
+
+	<h2>00:13:37 Und jetzt die Block-Ansicht</h2>
+
+	<span title="00:13:37.000: Lorem ipsum">Lorem ipsum</span>
+	<span title="00:13:37.000: dolor sit amet"><a href="#">dolor sit amet</a></span>
+	<span title="00:13:37.000: consetetur sadipscing elitr">consetetur sadipscing elitr</span>
+	<span title="00:13:37.000: sed diam nonumy eirmod tempor invidunt"><a href="#">sed diam nonumy eirmod tempor invidunt</a></span>
+	<span title="00:13:37.000: ut labore et dolore magna aliquyam erat"><a href="#">ut labore et dolore magna aliquyam erat</a></span>
+	<span title="00:13:37.000: sed diam voluptua">sed diam voluptua</span>
 
 </div>
 
