--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -189,6 +189,10 @@ h3 {
 	color: #999;
 	text-transform: uppercase;
 }
+h4 {
+	font-size: 1em;
+	font-weight: bold;
+}
 p,
 li,
 blockquote,
@@ -315,6 +319,7 @@ button,
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	user-select: none;
+	-webkit-appearance: none;
 }
 input[type='button']:hover,
 input[type='button']:focus,
@@ -339,19 +344,19 @@ button:active,
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,.2);
 }
 input[type='button']:disabled,
-input[type='submit']:disabled,
 input[type='button']:disabled:hover,
-input[type='submit']:disabled:hover,
 input[type='button']:disabled:active,
-input[type='submit']:disabled:active {
+input[type='submit']:disabled,
+input[type='submit']:disabled:hover,
+input[type='submit']:disabled:active,
+button:disabled,
+button:disabled:hover,
+button:disabled:active {
 	background-color: #ccc;
 	color: #999;
 	cursor: default;
 	top: 0;
 	box-shadow: inset 0 -3px 0 rgba(0,0,0,.3);
-}
-button span {
-	margin-right: .5em;
 }
 .button-group {
 	display: -webkit-box;
@@ -454,6 +459,9 @@ body {
 /* Header */
 header {
 	margin-bottom: 2em;
+}
+header a {
+	display: block;
 }
 header h1 {
 	line-height: 1;
@@ -790,16 +798,30 @@ nav li > input {
 .readonly-header h2 + h3 {
 	margin: 0 0 1em 0;
 }
-.document-text h2 {
+.document-list h2,
+.document-block h2 {
 	font-weight: normal;
+	margin-bottom: .7em;
 }
-.document-text ul {
+
+/* List view */
+.document-list ul {
 	list-style: none;
 	padding-left: 0;
 	margin-bottom: 1em;
 }
-.document-text ul ul {
+.document-list ul ul {
 	margin-left: 1em;
+}
+
+/* Block view */
+.document-block:not(h2) {
+	line-height: 2.5;
+}
+.document-block span {
+	background-color: #eee;
+	padding: .5em;
+	border-radius: .4em;
 }
 
 /* User profiles */
@@ -826,6 +848,27 @@ ul.profile li:before {
 }
 .profile-edit textarea {
 	height: 7em;
+}
+
+/* Color picker */
+.sp-replacer {
+	color: inherit;
+	padding: 0;
+	border: none;
+}
+.sp-preview {
+	border: 1px solid #111;
+}
+.sp-picker-container {
+	width: 15em;
+	border-left: none;
+}
+.sp-container {
+	background-color: #eee;
+	border: 1px solid #111;
+}
+.sp-cancel {
+	color: inherit;
 }
 
 /* Styleguide */
@@ -949,7 +992,7 @@ footer a:hover {
 	color: #111;
 }
 
-/* Responsive */
+/* Responsive sidebar (main content is fluid) */
 @media only screen and (max-width: 992px) {
 	.sidebar {
 		min-width: 6em;
@@ -1000,4 +1043,51 @@ footer a:hover {
 	}
 }
 
-/* Print Layout */
+/* Print layout */
+@media print {
+	* {
+		background-color: #fff !important;
+		color: #000 !important;
+		text-shadow: none !important;
+		text-align: left !important;
+		border: none;
+		width: 100% !important;
+		box-shadow: none !important;
+	}
+	td,
+	th {
+		border-bottom: 1px solid #000;
+	}
+	hr {
+		border-top: 1px solid #000;
+	}
+	input,
+	input[type="submit"],
+	button,
+	textarea,
+	.box-wrapper {
+		border: 1px solid #000;
+	}
+	.container {
+		display: block;
+	}
+	.sidebar,
+	.content {
+		padding: 0;
+	}
+	.sidebar > *:not(header),
+	.button-group,
+	header img,
+	.sp-replace {
+		display: none;
+	}
+	header h1 {
+		font-size: 2em;
+	}
+	header a:before {
+		content: 'shownot.es';
+	}
+	.readonly-header img {
+		width: 100px !important;
+	}
+}
