--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -403,7 +403,6 @@ a:focus,
 a:active {
 	color: #007369;
 }
-
 a:active {
 	text-decoration: underline;
 }
@@ -467,12 +466,13 @@ header h1 {
 	line-height: 1;
 	margin-bottom: 1em;
 }
+header object,
 header img {
 	width: 100%;
 	height: auto;
 }
-header object:hover path {
-	fill: #40a662;
+header object.small {
+	display: none;
 }
 
 /* Navigation */
@@ -512,11 +512,6 @@ nav ul li > label:hover {
 	color: #007369;
 	cursor: pointer;
 }
-/*
-nav a:active {
-	box-shadow: inset 0 0 0.5em rgba(0, 0, 0, .1);
-}
-*/
 nav .toggle {
 	position: relative;
 }
@@ -998,11 +993,17 @@ footer a:hover {
 		min-width: 6em;
 		max-width: 6em;
 	}
-	header,
+	.sidebar > *:not(:first-child):not(:last-child) {
+		margin-bottom: 1em;
+	}
+	header object.large,
 	.sidebar > .toggle,
 	.sidebar p,
 	.sidebar .caption {
 		display: none;
+	}
+	header object.small {
+		display: block;
 	}
 	.sidebar {
 		padding: 1em;
