readonly-view prototype

--- a/app/views/document-readonly.html
+++ b/app/views/document-readonly.html
@@ -3,30 +3,27 @@
 	<img src="http://shownot.es/img/logos/cr_logo.png" alt="Chaosradio" width="100" height="100" />
 
 	<div>
-		<h2>Chaosradio</h2>
+		<h2>{{episode.podcast.title}}</h2>
 		<h3>
-			Episode 200<br />
-			01.02.2014 13:37
+			Episode {{episode.number}}<br />
+			{{episode.date}}
 		</h3>
-		<a href="#">Bearbeiten</a>
+		<a href="/doc/{{document.name}}">Bearbeiten</a>
 	</div>
 
 </div>
 
 <div class="button-group">
-	<button disabled >Liste</button>
-	<button>Block</button>
-	<button>OSF</button>
-	<button>Markdown</button>
-	<button>Reaper</button>
-	<button>Audacity</button>
-	<button>Kapitel</button>
+	<button ng-repeat="f in formats" ng-disabled="format == f.name" ng-click="enableFormat(f.name)">{{f.caption}}</button>
 	<button title="HTML herunterladen"><span class="icon-arrow-down"></span></button>
 </div>
 
 <hr />
 
 <div class="document-list">
+	<pre>
+{{rawText}}
+	</pre>
 
 	<h2>00:00:00 <a href="https://www.youtube.com/watch?v=XQKGWw-ZTaw">Intro: Kraftwerk - Number</a></h2>
 
