--- a/app/views/livelist.html
+++ b/app/views/livelist.html
@@ -32,3 +32,14 @@
 </table>
 
 <p>Die Termine stammen aus dem <a href="http://hoersuppe.de/kalender/">Hörsuppe-Kalender</a>.</p>
+
+<footer>
+
+	<ul>
+		<li><a href="/rules">Regeln</a></li>
+		<li><a href="#">Kontakt</a></li>
+		<li><a href="#">Datenschutz</a></li>
+		<li><a href="#">Impressum</a></li>
+	</ul>
+
+</footer>
