--- a/app/views/document-readonly.html
+++ b/app/views/document-readonly.html
@@ -1,13 +1,10 @@
-<div class="readonly-header">
+<div class="cover-header">
 
-	<img src="http://shownot.es/img/logos/cr_logo.png" alt="Chaosradio" width="100" height="100" />
+	<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="Chaosradio" class="cover" /></a>
 
 	<div>
-		<h2>{{episode.podcast.title}}</h2>
-		<h3>
-			Episode {{episode.number}}<br />
-			{{episode.date}}
-		</h3>
+		<h2>{{episode.podcast.title}} {{episode.number}}</h2>
+		<h3>{{episode.date}}</h3>
 		<a href="/doc/{{doc.name}}">Bearbeiten</a>
 	</div>
 
