--- a/app/views/livelist.html
+++ b/app/views/livelist.html
@@ -36,10 +36,10 @@
 <footer>
 
 	<ul>
+		<li><a href="#">Spenden</a></li>
 		<li><a href="/rules">Regeln</a></li>
-		<li><a href="#">Kontakt</a></li>
 		<li><a href="#">Datenschutz</a></li>
-		<li><a href="#">Impressum</a></li>
+		<li><a href="/imprint">Impressum</a></li>
 	</ul>
 
 </footer>
