--- a/app/views/styleguide.html
+++ b/app/views/styleguide.html
@@ -43,6 +43,13 @@
 		RGB: 238 / 238 / 238
 	</span>
 </div>
+<div class="colorblock" style="background-color: #999;">
+	<span>
+		<strong>Grau</strong><br />
+		Hex: #999999<br />
+		RGB: 153 / 153 / 153
+	</span>
+</div>
 <div class="colorblock" style="background-color: #666;">
 	<span>
 		<strong>Dunkelgrau</strong><br />
