--- a/app/views/livelist.html
+++ b/app/views/livelist.html
@@ -36,7 +36,7 @@
 <footer>
 
 	<ul>
-		<li><a href="#">Spenden</a></li>
+		<li><a href="/donate">Spenden</a></li>
 		<li><a href="/rules">Regeln</a></li>
 		<li><a href="#">Datenschutz</a></li>
 		<li><a href="/imprint">Impressum</a></li>
