--- a/app/views/sighting.html
+++ b/app/views/sighting.html
@@ -1,33 +1,12 @@
-<div class="sighting-wrapper">
-
-	<div>
-		<h2>
-			Chaosradio 200
-			<span class="statuslabel">Beendet</span>
-			<!-- <span class="statuslabel">Live</span> -->
-		</h2>
-		<h3>24.04.2014, 22:00:00</h3>
-	</div>
-
-	<div>
-		<form class="form-wrapper">
-			<input type="submit" value="Version sichten" />
-		</form>
-	</div>
-
-</div>
+<h2>
+	Chaosradio 200
+	<span class="statuslabel">Beendet</span>
+	<!-- <span class="statuslabel">Live</span> -->
+</h2>
+<h3>24.04.2014, 22:00:00</h3>
 
 <div class="box-wrapper">
-	<div class="sighting-wrapper">
-
-		<h3>Bearbeiten &mdash; <a href="#">Vorschau</a></h3>
-
-		<div class="form-check">
-			<input type="checkbox" id="provisional" value="checkrules" />
-			<label for="provisional">Als <em>vorläufig</em> markieren</label>
-		</div>
-
-	</div>
+	<h3>Bearbeiten &mdash; <a href="#">Vorschau</a></h3>
 
 	<div class="editor">
 		<iframe src="http://snotes20.com:9001/p/g.XPi5iDvxdHM1mrOP$happy-shooting-2014-08-05-08-10-16"></iframe>
@@ -57,7 +36,7 @@
 			EpicShownoter1337 <a href="#" title="Löschen"><span class="icon-close"></span></a>
 		</p>
 		<form class="input-group">
-			<input type="text" value="" placeholder="Name" ng-model="newpodcaster.name" />
+			<input type="text" value="" placeholder="Name" />
 			<input type="submit" value="Hinzufügen" />
 		</form>
 	</div>
@@ -68,12 +47,24 @@
 	<h3>Cover auswählen</h3>
 
 	<div class="coverlist">
-		<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" /></a>
-		<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" /></a>
-		<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" /></a>
-		<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" /></a>
-		<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" /></a>
-		<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" /></a>
+		<span class="active">
+			<img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" />
+		</span>
+		<span>
+			<img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" />
+		</span>
+		<span>
+			<img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" />
+		</span>
+		<span>
+			<img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" />
+		</span>
+		<span>
+			<img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" />
+		</span>
+		<span>
+			<img src="http://shownot.es/img/logos/cr_logo.png" alt="" class="cover" />
+		</span>
 	</div>
 
 	<h3>Cover hochladen</h3>
@@ -82,7 +73,7 @@
 		<input type="file" name="coverupload" accept="image/*" />
 	</form>
 
-	<p><strong>Wichtig:</strong> Vor dem Hochladen bitte Erlaubnis bei den Podcastern einholen</p>
+	<p><strong>Wichtig:</strong> Vor dem Hochladen bitte entsprechende Erlaubnis einholen</p>
 
 </div>
 
@@ -95,5 +86,9 @@
 </div>
 
 <form class="form-wrapper">
+	<div class="form-check">
+			<input type="checkbox" id="provisional" value="checkrules" />
+			<label for="provisional">Als <em>vorläufig</em> markieren</label>
+		</div>
 	<input type="submit" value="Version sichten" />
 </form>
